--- a/frontend/styles/blocks/site-head.css
+++ b/frontend/styles/blocks/site-head.css
@@ -9,6 +9,7 @@ body > header nav ul {
   justify-content: var(--flex-justify);
   gap: var(--gutter);
   list-style: none;
+  justify-content: space-between;
 }
 
 header a {
