--- a/frontend/styles/global/variables.css
+++ b/frontend/styles/global/variables.css
@@ -1,4 +1,5 @@
 /* Global variables */
+
 :root {
   --gutter: var(--space-s-m);
   --border-radius: 0.5rem;
@@ -8,6 +9,13 @@
   --transition-bounce: 500ms cubic-bezier(0.5, 0.05, 0.2, 1.5);
   --tracking: -0.05ch;
   --tracking-s: -0.075ch;
+
+  --color-dark: var(--stone-10);
+  --color-light: var(--stone-0);
+
+  /* **************** */
+  /* Sizes */
+  /* **************** */
 
   --space-xs: clamp(0.75rem, 0.69rem + 0.29vw, 0.9375rem);
   --space-s: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
@@ -34,7 +42,42 @@
 
   --size-fluid-1: clamp(0.5rem, 1vw, 1rem);
 
+  /* **************** */
+  /* Open-Props sizes */
+  /* **************** */
+
+  --size-000: -0.5rem;
+  --size-00: -0.25rem;
+  --size-1: 0.25rem;
+  --size-2: 0.5rem;
+  --size-3: 1rem;
+  --size-4: 1.25rem;
+  --size-5: 1.5rem;
+  --size-6: 1.75rem;
+  --size-7: 2rem;
+  --size-8: 3rem;
+  --size-9: 4rem;
+  --size-10: 5rem;
+  --size-11: 7.5rem;
+  --size-12: 10rem;
+  --size-13: 15rem;
+  --size-14: 20rem;
+  --size-15: 30rem;
+  --size-fluid-1: clamp(0.5rem, 1vw, 1rem);
+  --size-fluid-2: clamp(1rem, 2vw, 1.5rem);
+  --size-fluid-3: clamp(1.5rem, 3vw, 2rem);
+  --size-fluid-4: clamp(2rem, 4vw, 3rem);
+  --size-fluid-5: clamp(4rem, 5vw, 5rem);
+  --size-fluid-6: clamp(5rem, 7vw, 7.5rem);
+  --size-fluid-7: clamp(7.5rem, 10vw, 10rem);
+  --size-fluid-8: clamp(10rem, 20vw, 15rem);
+  --size-fluid-9: clamp(15rem, 30vw, 20rem);
+  --size-fluid-10: clamp(20rem, 40vw, 30rem);
+
+  /* **************** */
   /* Typography */
+  /* **************** */
+
   --font-sans: "Atkinson Hyperlegible", -apple-system, BlinkMacSystemFont,
     "Avenir Next", Avenir, "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI",
     Arial, Helvetica, "Helvetica Neue", sans-serif;
@@ -43,4 +86,39 @@
   /* --font-display: ui-serif, serif; */
 
   --font-base: var(--font-sans);
+
+  /* **************** */
+  /* Colors from Open-Props */
+  /* https://open-props.style/#colors */
+  /* **************** */
+
+  /* Gray */
+  --gray-0: #f8f9fa;
+  --gray-1: #f1f3f5;
+  --gray-2: #e9ecef;
+  --gray-3: #dee2e6;
+  --gray-4: #ced4da;
+  --gray-5: #adb5bd;
+  --gray-6: #868e96;
+  --gray-7: #495057;
+  --gray-8: #343a40;
+  --gray-9: #212529;
+  --gray-10: #16191d;
+  --gray-11: #0d0f12;
+  --gray-12: #030507;
+
+  /* Stone */
+  --stone-0: #f8fafb;
+  --stone-1: #f2f4f6;
+  --stone-2: #ebedef;
+  --stone-3: #e0e4e5;
+  --stone-4: #d1d6d8;
+  --stone-5: #b1b6b9;
+  --stone-6: #979b9d;
+  --stone-7: #7e8282;
+  --stone-8: #666968;
+  --stone-9: #50514f;
+  --stone-10: #3a3a37;
+  --stone-11: #252521;
+  --stone-12: #121210;
 }
