add RobotoMono monospaced typeface

--- a/frontend/styles/blocks/code.css
+++ b/frontend/styles/blocks/code.css
@@ -9,6 +9,15 @@
 
 */
 
+code {
+  padding: 0.125em 0.4em;
+  font-family: var(--font-mono);
+  background: var(--color-dark);
+  border-radius: var(--border-radius);
+  color: var(--color-light);
+  font-size: var(--size-step-0);
+}
+
 pre.highlight {
   padding: var(--space-s);
   background-color: var(--color-dark);
