--- a/frontend/styles/global/fonts.css
+++ b/frontend/styles/global/fonts.css
@@ -1,17 +1,19 @@
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(../fonts/atkinson-hyperlegible/Atkinson-Hyperlegible-Regular-102a.woff2) format('woff2');
+  src: url(../fonts/atkinson-hyperlegible/Atkinson-Hyperlegible-Regular-102a.woff2)
+    format("woff2");
 }
 
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: "Atkinson Hyperlegible";
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(../fonts/atkinson-hyperlegible/Atkinson-Hyperlegible-Bold-102a.woff2) format('woff2');
+  src: url(../fonts/atkinson-hyperlegible/Atkinson-Hyperlegible-Bold-102a.woff2)
+    format("woff2");
 }
 
 @font-face {
@@ -19,7 +21,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: local(''), url(../fonts/inter/inter-v7-latin-500.woff2) format('woff2');
+  src: local(""), url(../fonts/inter/inter-v7-latin-500.woff2) format("woff2");
 }
 
 @font-face {
@@ -27,5 +29,15 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: local(''), url(../fonts/inter/inter-v7-latin-700.woff2) format('woff2');
+  src: local(""), url(../fonts/inter/inter-v7-latin-700.woff2) format("woff2");
+}
+
+@font-face {
+  font-family: "RobotoMono";
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  src: local(""),
+    url(../fonts/robotomono/robotomono-variablefont_wght-webfont.woff2)
+      format("woff2");
 }
