add 'full-bleed' component

--- a/frontend/styles/blocks/code.css
+++ b/frontend/styles/blocks/code.css
@@ -21,6 +21,7 @@ code {
 pre.highlight {
   padding: var(--space-s);
   background-color: var(--color-dark);
+  border-radius: var(--border-radius);
 }
 
 /* Monokai theme */
