--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -121,7 +121,7 @@ article [href^="http"]:not([href*="http://localhost:4000"])::after
 
 /* Base selection styles that invert whatever colours are rendered */
 ::selection {
-  background: var(--color-dark);
+  background: var(--color-primary);
   color: var(--color-light);
 }
 
