--- a/frontend/styles/utilities/_all.css
+++ b/frontend/styles/utilities/_all.css
@@ -1,6 +1,7 @@
-@import 'content.css';
-@import 'flow.css';
-@import 'helpers.css';
-@import 'region.css';
-@import 'skip-link.css';
-@import 'wrapper.css';
+@import "content.css";
+@import "flow.css";
+@import "helpers.css";
+@import "region.css";
+@import "skip-link.css";
+@import "sr-only.css";
+@import "wrapper.css";
