--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -109,7 +109,7 @@ article [href^="http"]:not([href*="http://localhost:4000"])::after
   display: inline-block;
   inline-size: 1em;
   block-size: 1em;
-  background-image: url("/images/svg/external-link-line.svg");
+  background-image: var( --external-link, url("/images/svg/external-link-line.svg"));
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60% auto;
