feat: add transition and color to links on hover

--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -87,7 +87,11 @@ a {
 }
 
 a:hover {
-  text-decoration: none;
+  /* text-decoration: none; */
+  /* text-decoration-color: var(--color-primary); */
+  text-decoration: underline solid var(--color-primary) 2px;
+  text-underline-offset: 0.25em;
+  transition: var(--transition-fade);
 }
 
 :focus {
