feat: add Hero section with bg image

--- a/frontend/styles/blocks/_all.css
+++ b/frontend/styles/blocks/_all.css
@@ -2,6 +2,7 @@
 @import "button.css";
 @import "card.css";
 @import "code.css";
+@import "hero.css";
 @import "page.css";
 @import "prose.css";
 @import "section.css";
