--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,6 +1,7 @@
 /* Define CSS Layers */
 @layer global, composition, blocks, utilities;
 
+@import "variables/_all.css" layer(global);
 @import "global/_all.css" layer(global);
 @import "compositions/_all.css" layer(composition);
 @import "blocks/_all.css" layer(blocks);
