--- a/frontend/styles/blocks/site-foot.css
+++ b/frontend/styles/blocks/site-foot.css
@@ -1,11 +1,12 @@
 footer {
-  --external-link: url("/images/svg/external-link-light.svg");;
+  --external-link: url("/images/svg/external-link-light.svg");
 }
 
 .site-foot {
   padding: var(--space-s-m);
   background: var(--color-dark);
   color: var(--color-light);
+  font-size: var(--size-step-0);
 }
 
 .site-foot__inner {
@@ -35,5 +36,6 @@ footer {
 
 #social a::after {
   display: block;
-  min-width: 1em;
+  /* do not set min-width to not show */
+  /* min-width: 1em; */
 }
