--- a/frontend/styles/compositions/grid.css
+++ b/frontend/styles/compositions/grid.css
@@ -28,6 +28,6 @@ to change how empty grid tracks are handled */
 }
 
 .grid[data-layout='50-50'] {
-  --grid-placement: auto-fit;
+  /* --grid-placement: auto-fit; */
   --grid-min-item-size: clamp(16rem, 50vw, 26rem);
 }
