feat: update footer, blog, README

--- a/frontend/styles/blocks/_all.css
+++ b/frontend/styles/blocks/_all.css
@@ -4,6 +4,7 @@
 @import "code.css";
 @import "hero.css";
 @import "page.css";
+@import "product.css";
 @import "prose.css";
 @import "section.css";
 @import "seperator.css";
