--- a/frontend/styles/blocks/site-foot.css
+++ b/frontend/styles/blocks/site-foot.css
@@ -12,7 +12,7 @@ footer {
 .site-foot__inner {
   display: flex;
   gap: var(--space-s);
-  justify-content: center;
+  /* justify-content: center; */
   /* align-items: center; */
 }
 
