feat: refactor to use ERB templating language, get inline SVG semi-working

--- a/frontend/styles/blocks/site-foot.css
+++ b/frontend/styles/blocks/site-foot.css
@@ -39,3 +39,7 @@ footer {
   /* do not set min-width to not show */
   /* min-width: 1em; */
 }
+
+#social a>svg:hover {
+  stroke: var(--color-primary);
+}
