--- a/src/_layouts/post.erb
+++ b/src/_layouts/post.erb
@@ -5,9 +5,9 @@ layout: default
 <article class="region blog">
   <div class="wrapper flow prose">
 
-      <h1>{{ data.title }}</h1>
+    <h1><%= data.title %></h1>
 
-        {%= yield %}
+    <%= yield %>
 
   </div>
 </article>
