--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -5,9 +5,9 @@ layout: default
 <article class="region page">
   <div class="wrapper flow">
 
-    <h1>{{ data.title }}</h1>
+    <h1><%= data.title %></h1>
 
-    {%= yield %}
+    <%= yield %>
   
   </div>
 </article>
