--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -6,9 +6,9 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 
-{%= seo %}
+<%= seo %>
 
-<link rel="stylesheet" href="{%= webpack_path :css %}" />
-<script src="{%= webpack_path :js %}" defer></script>
+<link rel="stylesheet" href="<%= webpack_path :css %>" />
+<script src="<%= webpack_path :js %>" defer></script>
 
-{%= live_reload_dev_js %}
+<%= live_reload_dev_js %>
