--- a/frontend/styles/blocks/site-head.css
+++ b/frontend/styles/blocks/site-head.css
@@ -59,13 +59,10 @@ body > header nav ul {
 }
 
 /* hamburger icon from https://remixicon.com/ */
-#hamburger > span {
-  display: flex;
-}
-
-#hamburger > span::after {
+#hamburger::after {
   content: "";
-  background-image: url(/images/svg/menu-line.svg);
+  /* background-image: url(/images/svg/menu-line.svg); */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: contain;
   /* height: 24px; */
@@ -76,6 +73,7 @@ body > header nav ul {
   min-width: 24px; */
 }
 
-#hamburger[aria-expanded="true"] > span::after {
-  background-image: url(/images/svg/close-line.svg);
+#hamburger[aria-expanded="true"]::after {
+  /* background-image: url(/images/svg/close-line.svg); */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z'%3E%3C/path%3E%3C/svg%3E");
 }
