--- a/src/_layouts/home.erb
+++ b/src/_layouts/home.erb
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<%= render "home/hero" %>
+<%= render "home/hero_split" %>
 <%# render Shared::Hero.new(metadata: site.metadata, resource: resource, data: data) %>
 
 <br-container data-layout="content">
