--- a/src/_partials/home/_beliefs.erb
+++ b/src/_partials/home/_beliefs.erb
@@ -10,7 +10,7 @@
 
 <style>
 #full-bleed {
-    background-color: var(--jungle-3);
+    // background-color: var(--jungle-3);
     // --container-max-width: 100%;
     // background-image: var(--gradient-15);
 }
