--- a/src/_partials/home/_benefits.erb
+++ b/src/_partials/home/_benefits.erb
@@ -33,7 +33,7 @@
 <style>
 
 #benefits {
-    background-color: var(--blue-1);
+    // background-color: var(--blue-1);
     // background-image: var(--gradient-9);
 }
 
