--- a/src/_partials/home/_features.erb
+++ b/src/_partials/home/_features.erb
@@ -21,7 +21,7 @@
 <style>
 
 #features {
-    background-color: var(--gray-2);
+    // background-color: var(--gray-2);
 }
 
 #features br-grid-item {
