--- a/src/_partials/home/_features_section.erb
+++ b/src/_partials/home/_features_section.erb
@@ -77,8 +77,8 @@
 <style>
 
 #features {
-    --gradient-22: linear-gradient(to bottom right, rgba(172, 182, 229, 0.7), rgba(134, 253, 232, 0.7));
-    background-color: var(--jungle-1);
+    // --gradient-22: linear-gradient(to bottom right, rgba(172, 182, 229, 0.7), rgba(134, 253, 232, 0.7));
+    // background-color: var(--jungle-1);
     // background-image: var(--gradient-28);
 }
 
