--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -25,7 +25,7 @@
 
 #solution {
     background-color: var(--gray-2);
-    background-image: var(--gradient-19);
+    // background-image: var(--gradient-19);
 }
 
 </style>
