--- a/frontend/styles/global/_all.css
+++ b/frontend/styles/global/_all.css
@@ -1,4 +1,5 @@
-/* @import 'variables.css'; */
 /* @import 'fonts.css'; */
+@import "global-styles.css";
 @import 'layout.css';
 @import 'code.css';
+/* @import 'reset.css'; */
