--- a/frontend/styles/variables/_all.css
+++ b/frontend/styles/variables/_all.css
@@ -1,7 +1,8 @@
 @import "animations.css";
 @import "borders.css";
+@import "buttons.css";
 @import "colors.css";
 @import "gradients.css";
 @import "sizes.css";
 @import "typography.css";
-/* @import 'normalize.css'; */
+@import 'normalize.css';
