--- a/frontend/styles/variables/typography.css
+++ b/frontend/styles/variables/typography.css
@@ -6,7 +6,7 @@
     --font-transitional: Charter, Bitstream Charter, Sitka Text, Cambria, serif;
     --font-monospace-code: Dank Mono, Operator Mono, Inconsolata, Fira Mono, ui-monospace, SF Mono, Monaco, Droid Sans Mono, Source Code Pro, Cascadia Code, Menlo, Consolas, DejaVu Sans Mono, monospace;
 
-    --font-display: RedHatDisplay, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /* --font-display: RedHatDisplay, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
     --font-mono: "RobotoMono", Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     --font-geometric-humanist: Avenir, Montserrat, Corbel, URW Gothic, source-sans-pro, sans-serif;
     
@@ -14,6 +14,7 @@
     --font-serif: var(--font-transitional);
     --font-mono: var(--font-monospace-code);
     --font-base: var(--font-sans);
+    --font-display: var(--font-transitional);
 
     --font-size-00: .5rem;
     --font-size-0: .75rem;
@@ -50,12 +51,4 @@
     --font-weight-8: 800;
     --font-weight-9: 900;
 
-    --size-content-1: 20ch;
-    --size-content-2: 45ch;
-    --size-content-3: 60ch;
-    --size-content-4: 75ch;
-
-    --size-header-1: 20ch;
-    --size-header-2: 25ch;
-    --size-header-3: 35ch;
 }
